Update BE because Scenario CONTAINS gameCreationTimes
Partial update: compiles.