@@ -19,27 +19,27 @@ package uk.badamson.mc.service;
  */
 
 import java.time.Instant;
-import java.util.List;
+import java.util.Arrays;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.TreeSet;
 import java.util.UUID;
 import java.util.stream.Stream;
 
 import javax.annotation.Nonnull;
 
-import uk.badamson.mc.Game;
 import uk.badamson.mc.NamedUUID;
 import uk.badamson.mc.Scenario;
 
 public class ScenarioServiceImpl implements ScenarioService {
 
+   private static final Instant GAME_CREATION_TIME = Instant.now();
    // TODO have useful scenarios.
    private static final UUID ID = UUID.randomUUID();
-   private static final Game GAME = new Game(
-            new Game.Identifier(ID, Instant.now()));
    private static final Scenario SCENARIO = new Scenario(ID, "Section assault",
-            "Basic fire and movement tactics.", List.of(GAME)) {
+            "Basic fire and movement tactics.",
+            new TreeSet<>(Arrays.asList(GAME_CREATION_TIME))) {
    };
    private static final Map<NamedUUID, Scenario> SCENARIOS = Map
             .of(SCENARIO.getNamedUUID(), SCENARIO);
